--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "16.10.2",
+    "@types/react": "16.9",
+    "@types/react-dom": "16.9",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "react-test-renderer": "^16.9.0"
+    "react-scripts": "^4.0.3",
+    "react-test-renderer": "^16.9.0",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +39,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-to-json": "^1.5.3",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^24.9.1",
     "@types/react-test-renderer": "^16.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
