--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@types/node": "16.10.2",
     "@types/react": "16.9",
     "@types/react-dom": "16.9",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^4.0.3",
-    "react-test-renderer": "^16.9.0",
-    "typescript": "^4.4.3"
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "16.9.0",
+    "typescript": "4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,18 +38,18 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/enzyme-to-json": "^1.5.3",
-    "@types/jest": "^24.9.1",
-    "@types/react-test-renderer": "^16.9.0",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.4.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.0"
+    "@types/enzyme": "3.10.3",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/enzyme-to-json": "1.5.3",
+    "@types/jest": "24.9.1",
+    "@types/react-test-renderer": "16.9.0",
+    "@typescript-eslint/eslint-plugin": "4.32.0",
+    "@typescript-eslint/parser": "4.32.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "enzyme-to-json": "3.4.2",
+    "eslint": "7.32.0",
+    "eslint-plugin-react": "7.26.0"
   },
   "jest": {
     "collectCoverageFrom": [
