--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@types/node": "16.10.2",
-    "@types/react": "16.9",
     "@types/react-dom": "16.9",
+    "jsx-runtime": "^1.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^4.0.3",
     "react-test-renderer": "^16.9.0",
+    "router": "^1.3.5",
     "typescript": "^4.4.3"
   },
   "scripts": {
@@ -42,6 +44,9 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/enzyme-to-json": "^1.5.3",
     "@types/jest": "^24.9.1",
+    "@types/node": "^16.10.2",
+    "@types/react": "^16.14.15",
+    "@types/react-dom": "^16.9.14",
     "@types/react-test-renderer": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
