Add tests for sortOrders

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "lint": "eslint ./src --quiet",
     "test": "react-scripts test --watchAll=false",
+    "test-watch": "react-scripts test",
     "test-coverage": "npm test -- --coverage",
     "test-update-snap": "npm test -- --updateSnapshot",
     "eject": "react-scripts eject",
