Набрал нужное покрытие

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/Order/*.{js,jsx,ts,tsx}",
-      "src/utils/sortOrders.js"
+      "src/utils/sortOrders.ts"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
