--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@types/react-test-renderer": "16.9.0",
     "@typescript-eslint/eslint-plugin": "4.32.0",
     "@typescript-eslint/parser": "4.32.0",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "3.4.2",
     "eslint": "7.32.0",
     "eslint-plugin-react": "7.26.0"
@@ -54,7 +54,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/Order/*.{js,jsx,ts,tsx}",
-      "src/utils/sortOrders.js"
+      "src/utils/sortOrders.ts"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
