--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react-dom": "16.9",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "16.9.0",
     "typescript": "4.4.3"
   },
